# uuid_macro

./: Cargo.toml  LICENSE  README.md
uuid_macro/: Cargo.toml
uuid_macro/src/: lib.rs
uuid_macro_impl/: Cargo.toml
uuid_macro_impl/src/: lib.rs
